# ray-tracing-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.devcontainer/: devcontainer.json
benches/: parallel.rs
examples/: defocus_blur.rs  rtiow_final.rs
src/: color.rs  lib.rs  main.rs  material.rs  number.rs  objects.rs  ppm.rs  ray.rs  scene.rs  utils.rs  vector.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: mod.rs  plane.rs  sphere.rs
tests/: camera_config.rs
