[package]
name = "ray-tracing-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
rayon = "1.10.0"
thiserror = "2.0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parallel"
harness = false

[[example]]
name = "defocus-blur"
path = "./examples/defocus_blur.rs"

[[example]]
name = "rtiow-final"
path = "./examples/rtiow_final.rs"
